src/objects/dh_superclone__CloneField__c.object
<CustomObject>
    <fields>
        <fullName>dh_superclone__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CLONE</fullName>
                    <default>true</default>
                    <label>CLONE</label>
                </value>
                <value>
                    <fullName>VALUE</fullName>
                </value>
                <value>
                    <fullName>NULL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>dh_superclone__CloneObject__c</fullName>
        <label>Clone Object</label>
        <referenceTo>dh_superclone__CloneObject__c</referenceTo>
        <relationshipLabel>Object Fields</relationshipLabel>
        <relationshipName>CloneFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dh_superclone__Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The field will be editable when checked.</inlineHelpText>
        <label>Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dh_superclone__ExtID__c</fullName>
        <description>External ID used to help export configurations from an Org and insert them into a different Org.</description>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dh_superclone__Order__c</fullName>
        <label>Display Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dh_superclone__Show__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show on the clone page.</description>
        <label>Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dh_superclone__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Clone Field</label>
    <listViews>
        <fullName>dh_superclone__All</fullName>
        <columns>dh_superclone__CloneObject__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>dh_superclone__Action__c</columns>
        <columns>dh_superclone__Value__c</columns>
        <columns>dh_superclone__Show__c</columns>
        <columns>dh_superclone__Edit__c</columns>
        <columns>dh_superclone__Order__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Clone Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clone Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>